--- a/app.json
+++ b/app.json
@@ -21,11 +21,17 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "permissions": [
+        "android.permission.NFC"
+      ],
+      "package": "com.jazasoft.nfc"
     },
     "web": {
       "favicon": "./assets/favicon.png"
     },
-    "plugins": ["react-native-nfc-manager"]
+    "plugins": [
+      "react-native-nfc-manager"
+    ]
   }
 }
